// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell Tests drag and drop cell with no tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`Cell Tests drag and drop cell with tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile creature"
    title="fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature fly"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;

exports[`cell Tests cell Snapshot cell with no tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`cell Tests cell Snapshot cell with tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile creature"
    title="fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature fly"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;

exports[`cell Tests drag and drop cell with no tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`cell Tests drag and drop cell with tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile creature"
    title="fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature fly"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;
